css/styles.css
/* Student Name: Noah Hamblen
  File Name: styles.css
  Date: 11/25/24
*/

/* CSS started as a mobile first design */

/* Links dance, handwriting, and light fonts to CSS */
@font-face {
  font-family: "dance";
  src: url("../font/dancing.ttf") format("truetype");
}

@font-face {
  font-family: "light";
  src: url("../font/light.ttf") format("truetype");
}

@font-face {
  font-family: "handwriting";
  src: url("../font/handwriting.ttf") format("truetype");
}

/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  border: 0;
  font-family: "handwriting", sans-serif; /* Apply font "light" to everything except the title */
  box-sizing: border-box;
}

/* Style rules for header, header content, logo, and h1 title */
header {
  background-color: #e2e2fc;
  padding: 1em;
}

/* Class includes logo and title */
#header_1 {
  display: flex; /* Flexbox */
  align-items: center; /* Vertically centers items */
  gap: 20px; /* Adds space between the logo and heading */
}

#header_1 h1 {
  font-family: "dance", sans-serif; /* Apply font "dance" to title */
  font-size: 3.5em;
}

#header_1 img {
  width: 5.5em;
  height: auto;
}

/* Class includes intro text and hero image */
#header_2 {
  display: flex;
  flex-direction: column;
  align-items: center; /* Aligns image to center */
}

#header_2 img {
  padding-top: 1em;
  border-radius: 3em;
  height: auto;
  width: 26em;
  padding-bottom: 1em;
}

#header_2 p {
  font-size: 1.3em; /* Bigger intro font size */
  padding-top: 1em;
}

/* Style rules for mobile nav div */
#mobile_nav {
  display: flex;
  justify-content: center;
  align-items: center;
  position: sticky; /* Buttons stick to bottom of page */
  bottom: 0;
  z-index: 100; /* Ensures it's on top of other content */
}

#mobile_nav ul {
  list-style: none;
  display: flex; /* Flex so li items become a row */
  padding: 2em;
  gap: 20px;
}

#mobile_nav ul li a {
  background-color: #bcadca;
  border-radius: 1em;
  padding: 15px 30px;
  font-weight: bold;
  font-family: "Roboto", sans-serif;
  text-decoration: none;
}

a:visited {
  color: inherit;
}

li a {
  text-decoration: none;
}

/* Style rules for main content */
main {
  display: flex;
  flex-grow: 1; /* Allows main content to take up remaining space */
  padding-bottom: 4em; /* Adds space for footer */
  margin-top: 2em; /* Adds space for header */
  padding: 1em;
  flex-direction: column; /* Column aligns two images and text vertically */
  align-items: center;
  gap: 60px;
}

main p {
  padding-bottom: 1em; /* Pushes images down */
}

#subject_img_box {
  display: flex;
  flex-direction: column;
  gap: 2em;
  padding-bottom: 3em; /* Pushes footer down */
}

.subject_img {
  border-radius: 1em;
  width: 17em;
  height: auto;
}

/* Style rules for body and footer */
body {
  min-height: 100vh; /* Makes the body take up the full height of the viewport */
  display: flex;
  flex-direction: column;
}

footer {
  background-color: #e2e2fc;
  position: sticky;
  bottom: 0;
  z-index: 100;
}

/* Disable top links (desktop version) */
#desktop_nav {
  display: none;
}

/* Disable footer images for mobile */
#footer_img_box {
  display: none;
}

/* -------------------------------------------------------------------------------------------- */
/* Media query for desktop */
@media (min-width: 1024px) and (max-width: 2000px) {
  /* Pushes left and right of content in */
  header,
  main {
    padding-left: 5em;
    padding-right: 5em;
  }

  p {
    font-size: 1.5em;
  }

  /* Style rules for header elements */
  #header_box {
    display: flex;
    justify-content: space-between; /* Space logo and links apart */
  }

  #header_2 {
    display: flex;
    flex-direction: row;
  }

  #header_2 img {
    height: auto;
    width: 60em; /* Bigger hero image for desktop view */
  }

  #header_2 p {
    padding-left: 0em;
    padding-right: 5em;
    font-size: 2em;
  }

  #header_1 h1 {
    font-size: 5em; /* Bigger h1 for desktop view */
  }

  #header_1 img {
    width: 10em; /* Bigger logo image for desktop view */
    height: auto;
  }

  /* Style rules for desktop nav div */
  #desktop_nav {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #desktop_nav ul {
    list-style: none;
    display: flex; /* Flex so li items become a row */
    padding: 2em 0em 2em 2em;
    gap: 20px;
  }

  #desktop_nav ul li a {
    background-color: #bcadca;
    border-radius: 1em;
    font-weight: bold;
    padding: 20px 50px;
    font-size: 1.5em;
    font-family: "Roboto", sans-serif;
    transition: background-color 0.3s ease; /* Smooth transition for color change */
    text-decoration: none;
  }

  a:visited {
    color: inherit;
  }

  #desktop_nav ul li a:hover {
    background-color: #d0b9e5; /* Color change when hovering nav links */
  }

  #mobile_nav {
    display: none; /* Disable footer links (mobile version) */
  }

  /* Style rules for footer */
  footer {
    position: static;
  }

  #footer_img_box {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  #footer_img_box img {
    height: auto;
    width: 8em;
  }

  /* Style rules for main content */
  main {
    flex-direction: row; /* row aligns the two divs side by side */
  }

  .subject_img_box {
    padding-left: 5em;
    padding-right: 10em;
  }

  #goals_box {
    padding-left: 5em;
  }

  #about_p {
    padding-left: 5em;
  }

}
/* ... */

